# investment-simulation

./: .coverage  .geminiignore  .railwayignore  GEMINI.md  accumulation_page_snapshot.txt  adversary_input.txt  db_snapshot.json  ef_page_snapshot.txt  findings.md  findings_final.md  findings_impl.md  findings_impl_fix.md  frontend-quality-checker.skill  history_page_snapshot.txt  logs.1775921895759.json  logs.1775922332844.json  logs.1775922742672.json  logs.1775923537540.json  logs.1776170659815.json  railway.toml  reproduce_db_race.py  reproduce_sim_fail.py  response_1771125162441.json  tech_stack_complete.md  test.db  verdict.json  verdict_final.json  verdict_impl_fix.json  verdict_spec_fix.json
backend/: .coverage  adv_test.py  check_db.py  db_snapshot.json  pyproject.toml  railway.toml  requirements.txt  test.db  verify_db.py
backend/alembic/: env.py
backend/app/: config.py  crud.py  database.py  dependencies.py  log_utils.py  main.py  main.py.restored  models.py  precomputed_assets.json  schemas.py  seed_assets.py  simulation.py
backend/scripts/: analyze_logs.py  collect_historical_data.py  db_inspector.py  precompute_asset_stats.py  repair_db.py  reset_alembic.py  view_cache.py
backend/tests/: conftest.py  test_affiliate_admin_crud.py  test_affiliate_crud.py  test_affiliate_models.py  test_affiliates.py  test_analytics_api.py  test_analytics_logic.py  test_api_fixes.py  test_assets.py  test_auth_es256.py  test_collect_historical_data.py  test_data_sources.py  test_database.py  test_dividend_fetch.py  test_guest_access.py  test_jwks_failsafe.py  (+13 more)
(+369 files in other folders)
